--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mini-template-engine",
+  "name": "mini-template-engine-ts",
   "version": "1.0.0",
   "description": "O objetivo da Mini Template Engine é fornecer uma solução simples e leve para renderizar modelos de texto dinâmicos em aplicativos da web",
   "main": "dist/index.js",
