--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "mini-template-engine-ts",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "O objetivo da Mini Template Engine é fornecer uma solução simples e leve para renderizar modelos de texto dinâmicos em aplicativos da web",
   "main": "dist/index.js",
+  "module": "dist/index.mjs",
   "scripts": {
-    "build": "tsc",
+    "build": "tsup",
     "test": "vitest"
   },
   "keywords": [
@@ -15,6 +16,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.12.8",
+    "tsup": "^8.0.2",
     "tsx": "^4.9.0",
     "typescript": "^5.4.5",
     "vitest": "^1.6.0"
